Updated the anaconda env YML files

--- a/abm_environment.yml
+++ b/abm_environment.yml
@@ -132,6 +132,7 @@ dependencies:
   - prompt-toolkit=3.0.36=py310h06a4308_0
   - psutil=5.9.0=py310h5eee18b_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pudb=2022.1.3=pyhd8ed1ab_0
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.11.2=pyhd3eb1b0_0
@@ -172,6 +173,8 @@ dependencies:
   - typing_extensions=4.4.0=py310h06a4308_0
   - tzdata=2023c=h04d1e81_0
   - urllib3=1.26.15=py310h06a4308_0
+  - urwid=2.1.2=py310h5764c6d_6
+  - urwid_readline=0.13=pyhd8ed1ab_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - webencodings=0.5.1=py310h06a4308_1
   - websocket-client=0.58.0=py310h06a4308_4
